--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
         <title>Purrfect Contacts: Contact Page</title>
         <script type="text/javascript" src="js/md5.js"></script>
         <script type="text/javascript" src="js/code.js"></script>
-          <link href="css/styles.css" rel="stylesheet">
+          <link href="css/contacts.css" rel="stylesheet">
           <link href="images/" rel="images">
           <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
