--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <input type="text" class="input-field" id="firstName" placeholder="First Name" name="firstName" required />
                   <input type="text" class="input-field" id="lastName" placeholder="Last Name" name="lastName" required />
                   <input type="text" class="input-field" id="email" placeholder="Email" name="email" 
-                    pattern="^/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required />
+                    pattern="^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$" required />
                   <input type="text" class="input-field" id="username" placeholder="Username" name="login" required
                     pattern="(?=.*[a-zA-Z])[a-zA-Z0-9-_]{3,18}"
                     title="Must be between 3-13 characters and must contain at least one letter" />
