--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
                 <form id="signupForm" class="input-form">
                   <input type="text" class="input-field" id="firstName" placeholder="First Name" name="firstName" required />
                   <input type="text" class="input-field" id="lastName" placeholder="Last Name" name="lastName" required />
-                  <input type="text" class="input-field" id="email" placeholder="Email" name="email" 
-                    pattern="^[a-zA-Z0-9.!#$%&\'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$" required />
+                  <input type="text" class="input-field" id="email" placeholder="Email" name="email" required />
                   <input type="text" class="input-field" id="username" placeholder="Username" name="login" required
-                    pattern="(?=.*[a-zA-Z])[a-zA-Z0-9_-]{3,18}"
+                    pattern="(?=.*[a-zA-Z])[a-zA-Z0-9-_]{3,18}"
                     title="Must be between 3-13 characters and must contain at least one letter" />
                   <input type="password" class="input-field" id="password" placeholder="Pawsword" name="password" onfocus="showRequiredField()" onblur="hideRequiredField()"
                         pattern="(?=.*\d)(?=.*[A-Za-z])(?=.*[!@#$%^&*]).{8,32}" required
