--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Purrfect Contacts</title>
+    <title>Purrfect Contacs</title>
     <script type="text/javascript" src="js/md5.js"></script>
     <script type="text/javascript" src="js/code.js"></script>
       <link href="css/styles.css" rel="stylesheet">
