--- a/contacts.html
+++ b/contacts.html
@@ -19,9 +19,15 @@
 <body>
 
 	<!-- page content, each div inside content is formatted with flex-->
+	<div class="topnav">
+		<a class="active" href="https://github.com/parkerblume/PurrfectContacts">Home</a>
+		<a href="contacts.html">Contacts</a>
+		<a href="members.html">About Us</a>
+		<a class="logout" button type="button" id="logoutButton"  onclick="doLogout();">Logout</button>
+	  </div>
+
 	<div class="content">
 		<div class="loggedInDiv">
-            <button type="button" id="logoutButton"  onclick="doLogout();">Logout</button>
 			<span style="color:#d6a3ba" id="userName"></span><br />
 		</div>
 		<div class="accessUIDiv">
