--- a/members.html
+++ b/members.html
@@ -11,12 +11,12 @@
 
 <body>
   <div class="bodyContainer">
-    <div class="sidenav">
-      <img id="logo" src="images/cat-peeking-winking.png" alt="Logo for PurrfectContacts ">
-      <button type="button" id="logoutButton" class="sidebuttons font" onclick="doLogout();">Logout</button>
-      <a href="contacts.html">Contacts</a> 
-      <a href="members.html">The Creators</a>
-    </div>
+  	<div class="topnav">
+      <a class="active" href="https://github.com/parkerblume/PurrfectContacts">Home</a>
+      <a href="contacts.html">Contacts</a>
+      <a href="members.html">About Us</a>
+      <a class="logout" button type="button" id="logoutButton"  onclick="doLogout();">Logout</button>
+      </div>
     <div class = "container">
       <div class="grid-container">
       <div class="grid-item"><img src="images/missing.png"><br>Parker Blume</div>
