same background color across pages

--- a/contacts.html
+++ b/contacts.html
@@ -16,9 +16,8 @@
       </head>
 </head>
 
-<body>
-
-	<!-- page content, each div inside content is formatted with flex-->
+<body class="body">
+	<!-- top navigation bar-->
 	<div class="topnav">
 		<a class="active" href="https://github.com/parkerblume/PurrfectContacts">Home</a>
 		<a href="contacts.html">Contacts</a>
