--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
-	<!-- top navigation bar-->
-	<div class="topnav">
+<!-- top navigation bar-->
+	<div id='navbar' class="topnav">
 		<a class="active" href="https://github.com/parkerblume/PurrfectContacts">Home</a>
 		<a href="contacts.html">Contacts</a>
 		<a href="members.html">About Us</a>
