--- a/contacts.html
+++ b/contacts.html
@@ -7,9 +7,10 @@
     <head>
         <title>Purrfect Contacts: Contact Page</title>
         <script type="text/javascript" src="js/md5.js"></script>
-        <script type="text/javascript" src="js/code.js"></script>
+        <script type="text/javascript" src="js/code.jss"></script>
           <link href="css/contacts.css" rel="stylesheet">
           <link href="images/" rel="images">
+		  <link href="nav.html" rel="navbar">
           <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
@@ -18,12 +19,7 @@
 
 <body class="body">
 	<!-- top navigation bar-->
-	<div class="topnav">
-		<a class="active" href="https://github.com/parkerblume/PurrfectContacts">Home</a>
-		<a href="contacts.html">Contacts</a>
-		<a href="members.html">About Us</a>
-		<a class="logout" button type="button" id="logoutButton"  onclick="doLogout();">Logout</button>
-	  </div>
+	<navbar></navbar>
 
 	<div class="content">
 		<div class="loggedInDiv">
