color theme/ cat images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div id="imageDisplay" class="image-box" >
-            <img id="kitty" src="images/sittingCat.png" alt="Sitting cat :)">
+            <img id="kitty" src="images/mouseCat.png" alt="Sitting cat :)">
             <div id="requirements" class="bubble-container">
               <img id="bubble" src="images/speechbubble.png" alt="password requirements bubble">
             </div>
