--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,6 @@
 <!-- top navigation bar-->
 	<div id='navbar' class="topnav">
+		<link href="css/contacts.css" rel="stylesheet">
 		<a class="active" href="https://github.com/parkerblume/PurrfectContacts">Home</a>
 		<a href="contacts.html">Contacts</a>
 		<a href="members.html">About Us</a>
