--- a/contacts.html
+++ b/contacts.html
@@ -14,6 +14,19 @@
           <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
+		  <!--from example -->
+		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+		<link href='https://fonts.googleapis.com/css?family=Island Moments' rel='stylesheet'>
+		<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       </head>
 </head>
 
@@ -35,10 +48,8 @@
 						onclick="searchContacts();"><i class="fas fa-search"></i></a>
 				</div>
 			</div>
-			<div class="column"><button type="button" onclick=loadContacts()><i class="fa fa-refresh"
-						style="font-size:30px;color:rgba(155, 188, 115, 0.9)" aria-hidden="true"></i></button></div>
 			<div class="column"><button type="button" onclick=showTable()> <i class="fas fa-user-plus"
-						style="font-size:27px;color:rgba(155, 188, 115, 0.9)"></i></button></div>
+						style="font-size:27px;color:#478fbb"></i></button></div>
 		</div>
 		<!--add contact form-->
 		<div class="addContacts">
@@ -63,6 +74,7 @@
 							<th>Last&nbspName</th>
 							<th>Email</th>
 							<th>Phone</th>
+							<th>Date</th>
 							<th></th>
 						</tr>
 					</thread>
