Added navbar to each page

--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
 
 <body class="body">
 	<!-- top navigation bar-->
-	<navbar></navbar>
+	<nav id="navbar" class="navbar"></nav>
 
 	<div class="content">
 		<div class="loggedInDiv">
