--- a/members.html
+++ b/members.html
@@ -20,13 +20,7 @@
 </head>
 
 <body>
-  <div class="bodyContainer">
-  	<div class="topnav">
-      <a class="active" href="https://github.com/parkerblume/PurrfectContacts">Home</a>
-      <a href="contacts.html">Contacts</a>
-      <a href="members.html">About Us</a>
-      <a class="logout" button type="button" id="logoutButton"  onclick="doLogout();">Logout</button>
-      </div>
+    <nav id="navbar" class="navbar"></nav>
     <div class = "container">
       <div class="grid-container">
       <div class="grid-item"><img src="images/missing.png"><br>Parker Blume</div>
