Possible line removed that could be messing with login

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   pattern="(?=.*\d)(?=.*[A-Za-z])(?=.*[!@#$%^&*]).{8,32}" required
                   title="Must be between 8-32 characters and must contain at least one number and one special character" />
             <i class="toggle-password-register far fa-eye" onclick="togglePasswordVisibility('register')"></i>
-            <button class="clkbtn" id="loginButton" onclick="doRegister();"> Register! </button>
+            <button class="clkbtn" id="signupButton" onclick="doRegister();"> Register! </button>
             <span id="signupResult"></span>
           </form>
         </div>
