--- a/contacts.html
+++ b/contacts.html
@@ -71,7 +71,7 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="js/code.js"></script>
+	<script type="text/javascript" src="js/loggedIn.js"></script>
 </body>
 
 </html>
