--- a/navbar.html
+++ b/navbar.html
@@ -16,9 +16,9 @@
     <li id="user-display" class="user-dropdown">
       <div id="user-pic" class="user-pic">
         <div class="user-pic-container">
-          <img src="images/contactimages/meadesteed.PNG" class="user-pic" alt="User Picture">
+          <img src="" class="user-pic" alt="User Picture">
         </div>
-        <button class="user-btn">Hi, <span id="userName">&#x2B9B</span></button>
+        <button class="user-btn">Hi, <span id="userName"></span></button>
       </div>
       <div class="dropdown-content" id="userDropdownContent">
           <a href="/settings.html">Profile Settings</a>
