--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
   </head>
   <body class="body">
-      <div class="row">
-        <h1 id="title">Purrfect Contacts</h1>
-      </div>
+      <div class="content"></div>
+        <header> <h1 class="heading">Welcome to Purrfect Contacts!</h1> </header>  
+        <h3 class="title">Keep track of your purrfect cats.</h3>
       
       <div class="row" style="height:100%; display: flex; width: 100%;">
         <div class="" style="display: flex; justify-content: center; align-items: center; width:100%;">
@@ -65,5 +65,6 @@
       </div>
 
     <div class="row">COP4331 - Group 14</div>
+   </div>
   </body>
 </html>
