--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
       <div class="content"></div>
         <header> <h1 class="heading">Welcome to Purrfect Contacts!</h1> </header>  
         <h3 class="title">Keep track of your purrfect cats.</h3>
+
+        <div id="field-container" class="container">
+
+          <!-- upper button section to select
+            the login or signup form -->
+          <div class="slider"></div>
+          <div class="btn">
+            <button class="login">Login</button>
+            <button class="register">Register</button>
+          </div>
+        </div> <!-- Field container div -->
       
       <div class="row" style="height:100%; display: flex; width: 100%;">
         <div class="" style="display: flex; justify-content: center; align-items: center; width:100%;">
