--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   </head>
   <body class="body">
+    <nav id="navbar" class="navbar"></nav>
     <div class="content"></div>
 
         <header> <h1 class="heading">Welcome to Purrfect Contacts!</h1> </header>  
