--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
       <link href="images/" rel="images">
       <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <meta charset="UTF-8">
       <meta name="viewport"
         content="width=device-width, 
                 initial-scale=1.0">
 
   </head>
-  <body class="body">
+  <body>
     <nav id="navbar" class="navbar"></nav>
-    <div class="content"></div>
 
+    <div class="content">
         <header> <h1 class="heading">Welcome to Purrfect Contacts!</h1> </header>  
         <h3 class="title">Keep track of your purrfect cats.</h3>
 
@@ -58,10 +57,7 @@
               <span id="signupResult"></span>
             </form>
           </div>
-
         </div> <!-- Field container div -->
-    
-
     </div>
   </body>
 </html>
