--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
           <!-- upper button section to select
             the login or signup form -->
-          <div class="slider"></div>
+          <div class="slider" id="slider"></div>
           <div class="btn">
-            <button class="login">Login</button>
-            <button class="register">Register</button>
+            <button class="login" id="loginSelect">Login</button>
+            <button class="register" id="registerSelect">Register</button>
           </div>
 
           <!-- Form section that contains the
