--- a/contacts.html
+++ b/contacts.html
@@ -17,59 +17,254 @@
 </head>
 
 <body>
-
-	<!-- page content, each div inside content is formatted with flex-->
-	<div class="content">
-		<div class="loggedInDiv">
-            <button type="button" id="logoutButton"  onclick="doLogout();">Logout</button>
-			<span style="color:#d6a3ba" id="userName"></span><br />
+	<section>
+		<h1>Contact Table</h1>
+		<div class="tbl-header">
+		  <table cellpadding="0" cellspacing="0" border="0">
+			<thead>
+			  <tr>
+				<th>Image here</th>
+				<th>First name</th>
+				<th>Last name</th>
+				<th>Email<th> 
+				<th>Phone</th>
+				<th>Date</th>
+				<th></th>
+			  </tr>
+			</thead>
+		  </table>
 		</div>
-		<div class="accessUIDiv">
-			<br />
-			<div class="column">
-				<div class="search-container">
-					<input onkeyup=searchContacts() type="text" name="search" id="searchText" placeholder="Search..."
-						class="search-input">
-					<a href="#" class="search-btn" type="button" id="searchContactButton" class="buttons font"
-						onclick="searchContacts();"><i class="fas fa-search"></i></a>
-				</div>
-			</div>
-			<div class="column"><button type="button" onclick=loadContacts()><i class="fa fa-refresh"
-						style="font-size:30px;color:rgba(155, 188, 115, 0.9)" aria-hidden="true"></i></button></div>
-			<div class="column"><button type="button" onclick=showTable()> <i class="fas fa-user-plus"
-						style="font-size:27px;color:rgba(155, 188, 115, 0.9)"></i></button></div>
+		<div class="tbl-content">
+		  <table cellpadding="0" cellspacing="0" border="0">
+			<tbody>
+			  <tr>
+				<td></td>
+				<td>Rachel</td>
+				<td>Vitaliano</td>
+				<td>rachelvitaliano@gmail.com</td>
+				<td>321-313-3668</td>
+				<td>1/26/2024</td>
+				<td>edit and delete button here</td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSENCO</td>
+				<td>$2.38</td>
+				<td>-0.01</td>
+				<td>-1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADELAIDE</td>
+				<td>$3.22</td>
+				<td>+0.01</td>
+				<td>+1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADITYA BIRLA</td>
+				<td>$1.02</td>
+				<td>-1.01</td>
+				<td>+2.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSTRALIAN COMPANY </td>
+				<td>$1.38</td>
+				<td>+2.01</td>
+				<td>-0.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSENCO</td>
+				<td>$2.38</td>
+				<td>-0.01</td>
+				<td>-1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADELAIDE</td>
+				<td>$3.22</td>
+				<td>+0.01</td>
+				<td>+1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADITYA BIRLA</td>
+				<td>$1.02</td>
+				<td>-1.01</td>
+				<td>+2.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSTRALIAN COMPANY </td>
+				<td>$1.38</td>
+				<td>+2.01</td>
+				<td>-0.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSENCO</td>
+				<td>$2.38</td>
+				<td>-0.01</td>
+				<td>-1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADELAIDE</td>
+				<td>$3.22</td>
+				<td>+0.01</td>
+				<td>+1.36%</td>
+				<td></td>
+			  </tr>
+				<td></td>
+				<td>AUSTRALIAN COMPANY </td>
+				<td>$1.38</td>
+				<td>+2.01</td>
+				<td>-0.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSENCO</td>
+				<td>$2.38</td>
+				<td>-0.01</td>
+				<td>-1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADELAIDE</td>
+				<td>$3.22</td>
+				<td>+0.01</td>
+				<td>+1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADITYA BIRLA</td>
+				<td>$1.02</td>
+				<td>-1.01</td>
+				<td>+2.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSTRALIAN COMPANY </td>
+				<td>$1.38</td>
+				<td>+2.01</td>
+				<td>-0.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSENCO</td>
+				<td>$2.38</td>
+				<td>-0.01</td>
+				<td>-1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADELAIDE</td>
+				<td>$3.22</td>
+				<td>+0.01</td>
+				<td>+1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADITYA BIRLA</td>
+				<td>$1.02</td>
+				<td>-1.01</td>
+				<td>+2.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSTRALIAN COMPANY </td>
+				<td>$1.38</td>
+				<td>+2.01</td>
+				<td>-0.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td></td>
+				<td>$2.38</td>
+				<td>-0.01</td>
+				<td>-1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADELAIDE</td>
+				<td>$3.22</td>
+				<td>+0.01</td>
+				<td>+1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADITYA BIRLA</td>
+				<td>$1.02</td>
+				<td>-1.01</td>
+				<td>+2.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSTRALIAN COMPANY </td>
+				<td>$1.38</td>
+				<td>+2.01</td>
+				<td>-0.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSENCO</td>
+				<td>$2.38</td>
+				<td>-0.01</td>
+				<td>-1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADELAIDE</td>
+				<td>$3.22</td>
+				<td>+0.01</td>
+				<td>+1.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>ADITYA BIRLA</td>
+				<td>$1.02</td>
+				<td>-1.01</td>
+				<td>+2.36%</td>
+				<td></td>
+			  </tr>
+			  <tr>
+				<td></td>
+				<td>AUSTRALIAN COMPANY </td>
+				<td>$1.38</td>
+				<td>+2.01</td>
+				<td>-0.36%</td>
+				<td></td>
+			  </tr>
+			</tbody>
+		  </table>
 		</div>
-		<!--add contact form-->
-		<div class="addContacts">
-			<form id="addMe" action="" method="post">
-				<input type="text" id="contactTextFirst" placeholder="First Name" required>
-				<input type="text" id="contactTextLast" placeholder="Last Name" required>
-				<input type="text" id="contactTextNumber" placeholder="XXX-XXX-XXXX" required
-					pattern="^[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4}$">
-				<input type="text" id="contactTextEmail" placeholder="name@email.com"
-					pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required>
-				<button type="button" id="addContactButton" class="buttons font" onclick="doAddContact();"> Add Contact
-				</button>
-			</form>
-		</div>
-		<!--contact table-->
-		<div class="tables">
-			<div class="tbl-content" id="contactsTable">
-				<table id="contacts" cellpadding="0" cellspacing="0" border="0">
-					<thread>
-						<tr>
-							<th>First&nbspName</th>
-							<th>Last&nbspName</th>
-							<th>Email</th>
-							<th>Phone</th>
-							<th></th>
-						</tr>
-					</thread>
-					<tbody id="tbody"></tbody>
-				</table>
-			</div>
-		</div>
-	</div>
+	  </section>
 </body>
 
 </html>
