--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
           <!-- upper button section to select
             the login or signup form -->
           <div class="slider" id="slider"></div>
-          <div class="btn">
-            <button class="login" id="loginSelect">Login</button>
-            <button class="register" id="registerSelect">Register</button>
+          <div class="slidebtn">
+            <button class="login" id="loginSelect" onclick="showLogin()">Login</button>
+            <button class="register" id="registerSelect" onclick="showSignup()">Register</button>
           </div>
 
           <!-- Form section that contains the
           login and the signup form -->
-          <div class="form-section">
+          <div id="form-fields" class="form-section">
             <form id="loginForm" class="login-box">
               <input type="text" class="ele" id="loginName" placeholder="Username OR Email" name="username" required="">
               <input type="password" class="ele" id="loginPassword" placeholder="Pawsword" name="password" required="" pattern="(?=.*\d)(?=.*[A-Za-z])(?=.*[!@#$%^&amp;*]).{8,32}" >
               <i class="toggle-password-login far fa-eye" onclick="togglePasswordVisibility('login')"></i>
-              <button type="button" id="loginButton" onclick="doLogin();"> Login</button>
+              <button type="button" class="button" id="loginButton" onclick="doLogin();"> Login</button>
               <span id="loginResult"></span>
             </form>
 
@@ -53,7 +53,7 @@
                     pattern="(?=.*\d)(?=.*[A-Za-z])(?=.*[!@#$%^&*]).{8,32}" required
                     title="Must be between 8-32 characters and must contain at least one number and one special character" />
               <i class="toggle-password-register far fa-eye" onclick="togglePasswordVisibility('register')"></i>
-              <button type="button" id="signupButton" onclick="doRegister();"> Register! </button>
+              <button type="button" class="button" id="signupButton" onclick="doRegister();"> Register! </button>
               <span id="signupResult"></span>
             </form>
           </div>
