everything should be back to working order, now just testing ideas

--- a/navbar.html
+++ b/navbar.html
@@ -16,7 +16,7 @@
       <li id="user-display" class="user-dropdown">
         <div id="user-pic" class="user-pic">
           <div class="user-pic-container">
-            <img src="" class="user-pic" alt="User Picture">
+            <img src="" class="user-pic" id="user-picture" alt="User Picture">
           </div>
           <button class="user-btn">Hi, <span id="userName"></span></button>
         </div>
