--- a/contacts.html
+++ b/contacts.html
@@ -1,1 +1,10 @@
 <h1>Contacts :)</h1>
+<header>
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="images/" rel="images">
+</header>
+<body>
+
+<nav id="navbar" class="navbar"></nav>
+
+</body>
