--- a/contacts.html
+++ b/contacts.html
@@ -1,8 +1,9 @@
 <h1>Contacts :)</h1>
-<header>
+<head>
     <link href="css/styles.css" rel="stylesheet">
     <link href="images/" rel="images">
-</header>
+    <script type="text/javascript" src="js/code.js"></script>
+</head>
 <body>
 
 <nav id="navbar" class="navbar"></nav>
