Added members pics
added members pics, updated members.html

--- a/members.html
+++ b/members.html
@@ -23,11 +23,11 @@
     <nav id="navbar" class="navbar"></nav>
     <div class = "container">
       <div class="grid-container">
-      <div class="grid-item"><img src="images/missing.png"><br>Parker Blume</div>
-      <div class="grid-item"><img src="images/missing.png"><br>Wilson Gil</div>
-      <div class="grid-item"><img src="images/missing.png"><br>Giovanni Maldonado-Velez</div>
-      <div class="grid-item"><img src="images/missing.png"><br>Rachel Vitaliano</div>
-      <div class="grid-item"><img src="images/missing.png"><br>Ximena Ramirez Rivera</div>
+      <div class="grid-item"><img src="images/membersImages/parker.png"><br>Parker Blume</div>
+      <div class="grid-item"><img src="images/membersImages/wilson.png"><br>Wilson Gil</div>
+      <div class="grid-item"><img src="images/membersImages//gio.png"><br>Giovanni Maldonado-Velez</div>
+      <div class="grid-item"><img src="images/membersImages/rachel.png"><br>Rachel Vitaliano</div>
+      <div class="grid-item"><img src="images/membersImages/ximena.png"><br>Ximena Ramirez Rivera</div>
       </div> 
     </div>
   </div>
