--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 <head>
     <link href="css/styles.css" rel="stylesheet">
     <link href="images/" rel="images">
-    <script type="text/javascript" src="js/code.js"></script>
+    <script type="text/javascript" src="js/loggedIn.js"></script>
 </head>
 <body>
 
