--- a/contacts.html
+++ b/contacts.html
@@ -1,11 +1,16 @@
-<h1>Contacts :)</h1>
 <head>
     <link href="css/styles.css" rel="stylesheet">
     <link href="images/" rel="images">
     <script type="text/javascript" src="js/loggedIn.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+    content="width=device-width, 
+            initial-scale=1.0">
+    
 </head>
 <body>
 
-<nav id="navbar" class="navbar"></nav>
+    <nav id="navbar" class="navbar"></nav>
+    <h1>Contacts :)</h1>
 
 </body>
