trying to fix user's name font

--- a/navbar.html
+++ b/navbar.html
@@ -18,7 +18,7 @@
           <div class="user-pic-container">
             <img src="" class="user-pic" id="user-picture" alt="User Picture">
           </div>
-          <button class="user-btn">Hi,  <span id="userName"></span></button>
+          <button class="user-btn">Hi,  <span id="userName" style="font-family:'Poppins', sans-serif;"></span></button>
         </div>
         <div class="dropdown-content" id="userDropdownContent">
             <a href="/settings.html">Profile Settings</a>
