navbar text adjustments

--- a/navbar.html
+++ b/navbar.html
@@ -20,7 +20,7 @@
           </div>
           <button class="user-btn" id="user">Hi,  <span id="userName"></span></button>
         </div>
-        <div class="dropdown-content" id="userDropdownContent">
+        <div class="dropdown-content" id="userDropdownContent" style="font-size: small;">
             <a href="/settings.html">Profile Settings</a>
             <a href="#" onclick="doLogout()">Logout</a>
         </div>
