--- a/navbar.html
+++ b/navbar.html
@@ -20,9 +20,9 @@
           </div>
           <button class="user-btn" id="user">Hi,  <span id="userName"></span></button>
         </div>
-        <div class="dropdown-content" id="userDropdownContent" style="font-size: small;">
-            <a href="/settings.html">Profile Settings</a>
-            <a href="#" onclick="doLogout()">Logout</a>
+        <div class="dropdown-content" id="userDropdownContent">
+            <a style="font-size: small;" href="/settings.html">Profile Settings</a>
+            <a style="font-size: small;" href="#" onclick="doLogout()">Logout</a>
         </div>
       </li>
     </ul>
