--- a/members.html
+++ b/members.html
@@ -20,7 +20,37 @@
 </head>
 
 <body>
-    <nav id="navbar" class="navbar"></nav>
+  <nav id="navbar" class="navbar">
+    <link href="css/navbar.css" rel="stylesheet">
+    <link href="images/" rel="images">
+    <meta charset="UTF-8">
+  
+  
+  <div class="navbar-container">
+    <div class="logo">
+      <a href="https://github.com/parkerblume/PurrfectContacts">
+        <img src="images/sittingCat.png">
+      </a>
+    </div>
+    <ul class="nav-links">
+      <li id="homeLink"><a href="/contacts.html" class="active">Contacts</a></li>
+      <li><a href="/members.html" class="">About</a></li>
+      <li id="user-display" class="user-dropdown" style="display: block;">
+        <div id="user-pic" class="user-pic">
+          <div class="user-pic-container">
+            <img src="https://fakewhitepages.com/images/User%20Images/defaultCat1.png" class="user-pic" id="user-picture" alt="User Picture">
+          </div>
+          <button class="user-btn" id="user">Hi,  <span id="userName"> hi ⮛</span></button>
+        </div>
+        <div class="dropdown-content" id="userDropdownContent">
+            <a style="font-size: small;" href="/settings.html">Profile Settings</a>
+            <a style="font-size: small;" href="#" onclick="doLogout()">Logout</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+  
+  <script type="text/javascript" src="js/code.js"></script></nav>
     <div class = "container">
       <div class="grid-container">
       <div class="grid-item"><img src="images/membersImages/parker.png"><br>Parker Blume</div>
