--- a/members.html
+++ b/members.html
@@ -25,7 +25,6 @@
     <link href="images/" rel="images">
     <meta charset="UTF-8">
   
-  
   <div class="navbar-container">
     <div class="logo">
       <a href="https://github.com/parkerblume/PurrfectContacts">
@@ -49,9 +48,9 @@
       </li>
     </ul>
   </div>
-  
   <script type="text/javascript" src="js/code.js"></script></nav>
     <div class = "container">
+      <h1>Meet the creators!</h1>
       <div class="grid-container">
       <div class="grid-item"><img src="images/membersImages/parker.png"><br>Parker Blume</div>
       <div class="grid-item"><img src="images/membersImages/wilson.png"><br>Wilson Gil</div>
