fixed css properties

--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<nav id="navbar" class="navbar"></nav>
-    <div class="content">
+    <div class="content-contacts">
     <section>
 		<h1>Contact Table</h1>
 		<div class="tbl-header">
