changed cat logo

--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,7 @@
   <div class="navbar-container">
     <div class="logo">
       <a href="https://github.com/parkerblume/PurrfectContacts">
-        <img src="images/sittingCat.png">
+        <img src="images/winkingcat.png">
       </a>
     </div>
     <ul class="nav-links">
