Fixed formatting things for consistency across pages

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <nav id="navbar" class="navbar"></nav>
 
     <div class="content">
+      <div class="content-container">
         <header> <h1 class="heading">Welcome to Purrfect Contacts!</h1> </header>  
         <h3 class="title">Keep track of your purrfect cats.</h3>
 
@@ -59,6 +60,7 @@
             </form>
           </div>
         </div> <!-- Field container div -->
+      </div>
     </div>
   </body>
 </html>
