--- a/contacts.html
+++ b/contacts.html
@@ -17,254 +17,254 @@
 <body>
 	<nav id="navbar" class="navbar"></nav>
     <div class="content-contacts">
-    <section>
-		<h1>Contact Table</h1>
-		<div class="tbl-header">
-		  <table cellpadding="0" cellspacing="0" border="0">
-			<thead>
-			  <tr>
-				<th>Image here</th>
-				<th>First name</th>
-				<th>Last name</th>
-				<th>Email<th> 
-				<th>Phone</th>
-				<th>Date</th>
-				<th></th>
-			  </tr>
-			</thead>
-		  </table>
+		<div class="table-section">
+			<h1>Contact Table</h1>
+			<div class="tbl-header">
+			<table cellpadding="0" cellspacing="0" border="0">
+				<thead>
+				<tr>
+					<th>Image here</th>
+					<th>First name</th>
+					<th>Last name</th>
+					<th>Email<th> 
+					<th>Phone</th>
+					<th>Date</th>
+					<th></th>
+				</tr>
+				</thead>
+			</table>
+			</div>
+			<div class="tbl-content">
+			<table cellpadding="0" cellspacing="0" border="0">
+				<tbody>
+				<tr>
+					<td></td>
+					<td>Rachel</td>
+					<td>Vitaliano</td>
+					<td>rachelvitaliano@gmail.com</td>
+					<td>321-313-3668</td>
+					<td>1/26/2024</td>
+					<td>edit and delete button here</td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSENCO</td>
+					<td>$2.38</td>
+					<td>-0.01</td>
+					<td>-1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADELAIDE</td>
+					<td>$3.22</td>
+					<td>+0.01</td>
+					<td>+1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADITYA BIRLA</td>
+					<td>$1.02</td>
+					<td>-1.01</td>
+					<td>+2.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSTRALIAN COMPANY </td>
+					<td>$1.38</td>
+					<td>+2.01</td>
+					<td>-0.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSENCO</td>
+					<td>$2.38</td>
+					<td>-0.01</td>
+					<td>-1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADELAIDE</td>
+					<td>$3.22</td>
+					<td>+0.01</td>
+					<td>+1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADITYA BIRLA</td>
+					<td>$1.02</td>
+					<td>-1.01</td>
+					<td>+2.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSTRALIAN COMPANY </td>
+					<td>$1.38</td>
+					<td>+2.01</td>
+					<td>-0.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSENCO</td>
+					<td>$2.38</td>
+					<td>-0.01</td>
+					<td>-1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADELAIDE</td>
+					<td>$3.22</td>
+					<td>+0.01</td>
+					<td>+1.36%</td>
+					<td></td>
+				</tr>
+					<td></td>
+					<td>AUSTRALIAN COMPANY </td>
+					<td>$1.38</td>
+					<td>+2.01</td>
+					<td>-0.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSENCO</td>
+					<td>$2.38</td>
+					<td>-0.01</td>
+					<td>-1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADELAIDE</td>
+					<td>$3.22</td>
+					<td>+0.01</td>
+					<td>+1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADITYA BIRLA</td>
+					<td>$1.02</td>
+					<td>-1.01</td>
+					<td>+2.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSTRALIAN COMPANY </td>
+					<td>$1.38</td>
+					<td>+2.01</td>
+					<td>-0.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSENCO</td>
+					<td>$2.38</td>
+					<td>-0.01</td>
+					<td>-1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADELAIDE</td>
+					<td>$3.22</td>
+					<td>+0.01</td>
+					<td>+1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADITYA BIRLA</td>
+					<td>$1.02</td>
+					<td>-1.01</td>
+					<td>+2.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSTRALIAN COMPANY </td>
+					<td>$1.38</td>
+					<td>+2.01</td>
+					<td>-0.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+					<td>$2.38</td>
+					<td>-0.01</td>
+					<td>-1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADELAIDE</td>
+					<td>$3.22</td>
+					<td>+0.01</td>
+					<td>+1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADITYA BIRLA</td>
+					<td>$1.02</td>
+					<td>-1.01</td>
+					<td>+2.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSTRALIAN COMPANY </td>
+					<td>$1.38</td>
+					<td>+2.01</td>
+					<td>-0.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSENCO</td>
+					<td>$2.38</td>
+					<td>-0.01</td>
+					<td>-1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADELAIDE</td>
+					<td>$3.22</td>
+					<td>+0.01</td>
+					<td>+1.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>ADITYA BIRLA</td>
+					<td>$1.02</td>
+					<td>-1.01</td>
+					<td>+2.36%</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>AUSTRALIAN COMPANY </td>
+					<td>$1.38</td>
+					<td>+2.01</td>
+					<td>-0.36%</td>
+					<td></td>
+				</tr>
+				</tbody>
+			</table>
+			</div>
 		</div>
-		<div class="tbl-content">
-		  <table cellpadding="0" cellspacing="0" border="0">
-			<tbody>
-			  <tr>
-				<td></td>
-				<td>Rachel</td>
-				<td>Vitaliano</td>
-				<td>rachelvitaliano@gmail.com</td>
-				<td>321-313-3668</td>
-				<td>1/26/2024</td>
-				<td>edit and delete button here</td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSENCO</td>
-				<td>$2.38</td>
-				<td>-0.01</td>
-				<td>-1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADELAIDE</td>
-				<td>$3.22</td>
-				<td>+0.01</td>
-				<td>+1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADITYA BIRLA</td>
-				<td>$1.02</td>
-				<td>-1.01</td>
-				<td>+2.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSTRALIAN COMPANY </td>
-				<td>$1.38</td>
-				<td>+2.01</td>
-				<td>-0.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSENCO</td>
-				<td>$2.38</td>
-				<td>-0.01</td>
-				<td>-1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADELAIDE</td>
-				<td>$3.22</td>
-				<td>+0.01</td>
-				<td>+1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADITYA BIRLA</td>
-				<td>$1.02</td>
-				<td>-1.01</td>
-				<td>+2.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSTRALIAN COMPANY </td>
-				<td>$1.38</td>
-				<td>+2.01</td>
-				<td>-0.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSENCO</td>
-				<td>$2.38</td>
-				<td>-0.01</td>
-				<td>-1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADELAIDE</td>
-				<td>$3.22</td>
-				<td>+0.01</td>
-				<td>+1.36%</td>
-				<td></td>
-			  </tr>
-				<td></td>
-				<td>AUSTRALIAN COMPANY </td>
-				<td>$1.38</td>
-				<td>+2.01</td>
-				<td>-0.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSENCO</td>
-				<td>$2.38</td>
-				<td>-0.01</td>
-				<td>-1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADELAIDE</td>
-				<td>$3.22</td>
-				<td>+0.01</td>
-				<td>+1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADITYA BIRLA</td>
-				<td>$1.02</td>
-				<td>-1.01</td>
-				<td>+2.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSTRALIAN COMPANY </td>
-				<td>$1.38</td>
-				<td>+2.01</td>
-				<td>-0.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSENCO</td>
-				<td>$2.38</td>
-				<td>-0.01</td>
-				<td>-1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADELAIDE</td>
-				<td>$3.22</td>
-				<td>+0.01</td>
-				<td>+1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADITYA BIRLA</td>
-				<td>$1.02</td>
-				<td>-1.01</td>
-				<td>+2.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSTRALIAN COMPANY </td>
-				<td>$1.38</td>
-				<td>+2.01</td>
-				<td>-0.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td></td>
-				<td>$2.38</td>
-				<td>-0.01</td>
-				<td>-1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADELAIDE</td>
-				<td>$3.22</td>
-				<td>+0.01</td>
-				<td>+1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADITYA BIRLA</td>
-				<td>$1.02</td>
-				<td>-1.01</td>
-				<td>+2.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSTRALIAN COMPANY </td>
-				<td>$1.38</td>
-				<td>+2.01</td>
-				<td>-0.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSENCO</td>
-				<td>$2.38</td>
-				<td>-0.01</td>
-				<td>-1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADELAIDE</td>
-				<td>$3.22</td>
-				<td>+0.01</td>
-				<td>+1.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>ADITYA BIRLA</td>
-				<td>$1.02</td>
-				<td>-1.01</td>
-				<td>+2.36%</td>
-				<td></td>
-			  </tr>
-			  <tr>
-				<td></td>
-				<td>AUSTRALIAN COMPANY </td>
-				<td>$1.38</td>
-				<td>+2.01</td>
-				<td>-0.36%</td>
-				<td></td>
-			  </tr>
-			</tbody>
-		  </table>
-		</div>
-	  </section>
     </div>
 </body>
 
