had to change the navbar class name due to bootstrap

--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
             initial-scale=1.0">
 </head>
 <body>
-	<nav id="navbar" class="navbar"></nav>
+	<nav id="navbar" class="custom-nav"></nav>
     <div class="content-contacts">
 		<div class="table-section">
 			<h1>Contact Table</h1>
