--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-    <nav id="navbar" class="navbar"></nav>
+    <div id="navbar" class="custom-nav"></div>
 
     <div class="content">
       <div class="content-container">
