--- a/members.html
+++ b/members.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav id="navbar" class="navbar"></nav>
+  <nav id="navbar" class="custom-nav"></nav>
   
   <div class="content">
     <div class = "container">
