--- a/settings.html
+++ b/settings.html
@@ -15,7 +15,7 @@
             <h4 class="pb-2 border-bottom">Profile settings</h4>
             <div class="row mt-3">
                 <div class="user-display">
-                    <img scr="" class="img" alt="user photo" id="user-picture">
+                    <img scr="" class="img" alt="user photo" id="displayPicture">
                     <p>Only upload a file type .png.</p>
                     <button class="btn border"><b>Upload</b></button>
                 </div>
