fixed mispellings causing crashes

--- a/settings.html
+++ b/settings.html
@@ -50,7 +50,7 @@
             <div class="row pt-4 pb-4 border-bottom">
                 <button type="button" class="btn save-button border" style="margin-left:2%;" onclick="doUpdateUser()">Save Changes</button>
                 <button type="button" class="btn border cancel-button" onclick="doCancel()">Cancel</button>
-                <span id="changesResult"></span>
+                <span id="changeResult"></span>
             </div>
             <div class="d-sm-flex delete-row">
                 <div>
