fix buttons / table background

--- a/contacts.html
+++ b/contacts.html
@@ -16,8 +16,6 @@
 </head>
 <body>
 	<nav id="navbar" class="custom-nav"></nav>
-	<h1>Contacts</h1>
-
     <div class="content-contacts">
 		<div class="box">
 			<input type ="text" placeholder="search"/>
@@ -25,24 +23,25 @@
 				<ion-icon name="search-outline"></ion-icon>
 			</a>
 		</div>
-		<div>
-			<button class ="add_new"><ion-icon name="add-outline"></ion-icon></button> </button>
-		</div>
 		<div class="table-section">
 			<div class="tbl-header">
-			<table cellpadding="0" cellspacing="0" border="0">
-				<thead>
-				<tr>
-					<th></th>
-					<th>First name</th>
-					<th>Last name</th>
-					<th>Email<th> 
-					<th>Phone</th>
-					<th>Date</th>
-					<th></th>
-				</tr>
-				</thead>
-			</table>
+				<table cellpadding="0" cellspacing="0" border="0">
+					<thead>
+					<tr>
+						<div class="row">
+							<th><div>
+								<button class ="add_new test"><ion-icon name="person-add-outline"></ion-icon></button> </button>
+							</div></th>
+							<th>First name</th>
+							<th>Last name</th>
+							<th>Email</th> 
+							<th>Phone</th>
+							<th>Date</th>
+							<th></th>
+						</div>
+					</tr>
+					</thead>
+				</table>
 			</div>
 			<div class="tbl-content">
 			<table cellpadding="0" cellspacing="0" border="0">
