--- a/contacts.html
+++ b/contacts.html
@@ -8,11 +8,17 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="images/" rel="images">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <script type="text/javascript" src="js/code.js"></script>
     <script type="text/javascript" src="js/loggedIn.js"></script>
     <meta charset="UTF-8">
-
 	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+	<script type="text/javascript">
+		document.addEventListener('DOMContentLoaded', function () {
+			readCookie();
+			loadContacts();
+		}, false);
+	</script>
 </head>
 <body>
 	<nav id="navbar" class="custom-nav"></nav>
@@ -28,7 +34,7 @@
 				<table cellpadding="0" cellspacing="0" border="0">
 					<thead>
 					<tr>
-						<div class="row">
+						<div>
 							<th><div>
 								<button class ="add_new test"><ion-icon name="person-add-outline"></ion-icon></button> </button>
 							</div></th>
@@ -47,7 +53,7 @@
 			<table cellpadding="0" cellspacing="0" border="0">
 				<tbody>
 				<tr>
-					<td><img src="images/sittingCat.png"/></td>
+					<td><img src="images/sittingCat.png" /></td>
 					<td>Rachel</td>
 					<td>Vitaliano</td>
 					<td>rachelvitaliano@gmail.com</td>
@@ -57,7 +63,7 @@
 						<button class = "table_button"onclick="delete_row()"> <ion-icon name="create-outline"></ion-icon></button></button></td>
 				</tr>
 				<tr>
-					<td><img src="images/blackCat.png"/></td>
+					<td><img src="getRandomImage()"/></td>
 					<td>Rachel</td>
 					<td>Vitaliano</td>
 					<td>rachelvit@gmail.com</td>
