delete account functionality

--- a/settings.html
+++ b/settings.html
@@ -59,6 +59,7 @@
                 </div>
                 <div class="delete-col">
                     <button class="btn border" onclick="doDeleteUser()">Delete</button>
+                    <span id="deleteInfo"></span>
                 </div>
             </div>
             <div class="cat-container">
