--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,9 @@
     <meta name="viewport"
     content="width=device-width, 
             initial-scale=1.0">
+
+	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
 	<nav id="navbar" class="custom-nav"></nav>
