--- a/contacts.html
+++ b/contacts.html
@@ -25,15 +25,14 @@
 			<table cellspacing="0" cellpadding="0" class="table-height">
 				<thead class="tbl-header">
 					<tr>
-						<th style="width:70px;"><div>
-							<button class ="add_new test" onclick="addContactForm()"><ion-icon name="person-add-outline"></ion-icon></button></button>
+						<th style="width:8%; padding-right:0;"><div style="width:60px;">
+							<button class ="add_new test" onclick="addContactForm()"><ion-icon name="person-add-outline"></ion-icon></button>
 						</div></th>
-						<th>First name</th>
-						<th>Last name</th>
-						<th>Email</th> 
-						<th>Phone</th>
-						<th>Date</th>
-						<th></th>
+						<th style="width:20%">First name</th>
+						<th style="width:20%">Last name</th>
+						<th style="width:25%">Email</th> 
+						<th style="width:25%">Phone</th>
+						<th style="width:100px;"></th>
 					</tr>
 				</thead>
 			</table>
@@ -51,6 +50,8 @@
 			</div>
 		</div>
 	</div>
+	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
