--- a/contacts.html
+++ b/contacts.html
@@ -21,7 +21,8 @@
 	<nav id="navbar" class="custom-nav"></nav>
     <div class="content-contacts">
 		<div class="box">
-			<input type ="text" placeholder="search"/>
+			
+			<input  onkeyup=searchContacts() id = "searchText"type ="text" placeholder="search"/>
 			<a href = "a">
 				<ion-icon name="search-outline"></ion-icon>
 			</a>
