fixed search for contacts

--- a/contacts.html
+++ b/contacts.html
@@ -22,8 +22,8 @@
     <div class="content-contacts">
 		<div class="box">
 			
-			<input  onkeyup=searchContacts() id = "searchText"type ="text" placeholder="search"/>
-			<a href = "a">
+			<input onkeyup="searchContacts()" id="searchText" type ="text" placeholder="search"/>
+			<a>
 				<ion-icon name="search-outline"></ion-icon>
 			</a>
 		</div>
