--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,7 @@
     <link href="css/contacts.css" rel="stylesheet">
     <link href="images/" rel="images">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <script type="text/javascript" src="js/code.js"></script>
     <script type="text/javascript" src="js/loggedIn.js"></script>
     <meta charset="UTF-8">
