--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link href="images/" rel="images">
       <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+      <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
       <meta charset="UTF-8">
       <meta name="viewport"
         content="width=device-width, 
