--- a/members.html
+++ b/members.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="js/code.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Island Moments' rel='stylesheet'>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 
 <body>
