--- a/settings.html
+++ b/settings.html
@@ -2,6 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/settings.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <script type="text/javascript" src="js/md5.js"></script>
     <script type="text/javascript" src="js/loggedIn.js"></script>
     <script type="text/javascript" src="js/profileSettings.js"></script>
