changed username text field

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           login and the signup form -->
           <div id="form-fields" class="form-section">
             <form id="loginForm" class="login-box">
-              <input type="text" class="ele" id="loginName" placeholder="Username OR Email" name="username" required="">
+              <input type="text" class="ele" id="loginName" placeholder="Username" name="username" required="">
               <input type="password" class="ele" id="loginPassword" placeholder="Pawsword" name="password" required="" pattern="(?=.*\d)(?=.*[A-Za-z])(?=.*[!@#$%^&amp;*]).{8,32}" >
               <i class="toggle-password-login far fa-eye" onclick="togglePasswordVisibility('login')"></i>
               <button type="button" class="button" id="loginButton" onclick="doLogin();"> Login</button>
